dataset1235/2025-2/610742602/users/1141075619/executions/677928262_3691284457.log
== SUBMISSION (2025-08-28 04:06:58)
-- CODE: 
A= float(input("Insira sua 1° nota:"))
B= float(input("Insira sua 2° nota:"))
C= float(input("Insira sua 3° nota:"))
D= float(input("Insira sua 4° nota:"))

N= (A*1 + B*2 + C*3 + D*4)/10
print (round(N,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 7
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 7
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 7
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 7
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 7
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 7
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 04:09:15)
-- CODE: 
A= float(input("Insira sua 1° nota:"))
B= float(input("Insira sua 2° nota:"))
C= float(input("Insira sua 3° nota:"))
D= float(input("Insira sua 4° nota:"))

N= (A*1 + B*2 + C*3 + D*4)/10

print(round(N,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 04:06:06)
-- CODE: 
A= float(input("Insira sua 1° nota:"))
B= float(input("Insira sua 2° nota:"))
C= float(input("Insira sua 3° nota:"))
D= float(input("Insira sua 4° nota:"))

N= (A*1 + B*2 + C*3 + D*4)/10

print (round(N,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 04:23:13)
-- CODE: 
A= float(input("Insira sua 1° nota:"))
B= float(input("Insira sua 2° nota:"))
C= float(input("Insira sua 3° nota:"))
D= float(input("Insira sua 4° nota:"))

N= (A*1 + B*2 + C*3 + D*4)/10

print(round(N,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua 1° nota:Insira sua 2° nota:Insira sua 3° nota:Insira sua 4° nota:7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua 1° nota:Insira sua 2° nota:Insira sua 3° nota:Insira sua 4° nota:8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua 1° nota:Insira sua 2° nota:Insira sua 3° nota:Insira sua 4° nota:7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua 1° nota:Insira sua 2° nota:Insira sua 3° nota:Insira sua 4° nota:6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua 1° nota:Insira sua 2° nota:Insira sua 3° nota:Insira sua 4° nota:30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua 1° nota:Insira sua 2° nota:Insira sua 3° nota:Insira sua 4° nota:7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 04:06:32)
-- CODE: 
A= float(input("Insira sua 1° nota:"))
B= float(input("Insira sua 2° nota:"))
C= float(input("Insira sua 3° nota:"))
D= float(input("Insira sua 4° nota:"))

N= (A + B*2 + C*3 + D*4)/10

print (round(N,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 04:06:56)
-- CODE: 
A= float(input("Insira sua 1° nota:"))
B= float(input("Insira sua 2° nota:"))
C= float(input("Insira sua 3° nota:"))
D= float(input("Insira sua 4° nota:"))

N= (A*1 + B*2 + C*3 + D*4)/10
print (round(N,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 7
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 7
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 7
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 7
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 7
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 7
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 04:06:32)
-- CODE: 
A= float(input("Insira sua 1° nota:"))
B= float(input("Insira sua 2° nota:"))
C= float(input("Insira sua 3° nota:"))
D= float(input("Insira sua 4° nota:"))

N= (A + B*2 + C*3 + D*4)/10

print (round(N,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 04:23:12)
-- CODE: 
A= float(input("Insira sua 1° nota:"))
B= float(input("Insira sua 2° nota:"))
C= float(input("Insira sua 3° nota:"))
D= float(input("Insira sua 4° nota:"))

N= (A*1 + B*2 + C*3 + D*4)/10

print(round(N,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Insira sua 1° nota:Insira sua 2° nota:Insira sua 3° nota:Insira sua 4° nota:7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Insira sua 1° nota:Insira sua 2° nota:Insira sua 3° nota:Insira sua 4° nota:8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Insira sua 1° nota:Insira sua 2° nota:Insira sua 3° nota:Insira sua 4° nota:7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Insira sua 1° nota:Insira sua 2° nota:Insira sua 3° nota:Insira sua 4° nota:6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Insira sua 1° nota:Insira sua 2° nota:Insira sua 3° nota:Insira sua 4° nota:30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Insira sua 1° nota:Insira sua 2° nota:Insira sua 3° nota:Insira sua 4° nota:7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 04:06:46)
-- CODE: 
A= float(input("Insira sua 1° nota:"))
B= float(input("Insira sua 2° nota:"))
C= float(input("Insira sua 3° nota:"))
D= float(input("Insira sua 4° nota:"))

N= (A*1 + B*2 + C*3 + D*4)/10

print (round(N,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 04:08:36)
-- CODE: 
A= float(input("Insira sua 1° nota:"))
B= float(input("Insira sua 2° nota:"))
C= float(input("Insira sua 3° nota:"))
D= float(input("Insira sua 4° nota:"))

N= (A*1 + B*2 + C*3 + D*4)/10

print(round(N,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 04:06:33)
-- CODE: 
A= float(input("Insira sua 1° nota:"))
B= float(input("Insira sua 2° nota:"))
C= float(input("Insira sua 3° nota:"))
D= float(input("Insira sua 4° nota:"))

N= (A + B*2 + C*3 + D*4)/10

print (round(N,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 04:06:47)
-- CODE: 
A= float(input("Insira sua 1° nota:"))
B= float(input("Insira sua 2° nota:"))
C= float(input("Insira sua 3° nota:"))
D= float(input("Insira sua 4° nota:"))

N= (A*1 + B*2 + C*3 + D*4)/10

print (round(N,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 04:09:14)
-- CODE: 
A= float(input("Insira sua 1° nota:"))
B= float(input("Insira sua 2° nota:"))
C= float(input("Insira sua 3° nota:"))
D= float(input("Insira sua 4° nota:"))

N= (A*1 + B*2 + C*3 + D*4)/10

print(round(N,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 04:05:35)
-- CODE: 
A= float (input("Insira sua 1° nota:"))
B= float (input("Insira sua 2° nota:"))
C= float (input("Insira sua 3° nota:"))
D= float (input("Insira sua 4° nota:"))

N= (A*1 + B*2 + C*3 + D*4)/10

print (round(N,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 04:09:15)
-- CODE: 
A= float(input("Insira sua 1° nota:"))
B= float(input("Insira sua 2° nota:"))
C= float(input("Insira sua 3° nota:"))
D= float(input("Insira sua 4° nota:"))

N= (A*1 + B*2 + C*3 + D*4)/10

print(round(N,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 8
    print(round(N,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 04:06:04)
-- CODE: 
A= float(input("Insira sua 1° nota:"))
B= float(input("Insira sua 2° nota:"))
C= float(input("Insira sua 3° nota:"))
D= float(input("Insira sua 4° nota:"))

N= (A*1 + B*2 + C*3 + D*4)/10

print (round(N,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 8
    print (round(N,2)
          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
